# machine-learning

./: pyproject.toml
supervised learning/classification/: logistic_regression.ipynb
supervised learning/regression/: linear-regression.ipynb  multiple_linear_regression.ipynb  simple_regression.ipynb
